--- a/coding2-main/javascript/assets/css/slider.css
+++ b/coding2-main/javascript/assets/css/slider.css
@@ -11,43 +11,43 @@ body {
 }
 
 body.img01 {
-    background: #000 url(../img/effect_bg01@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg01-min-min.jpg) no-repeat center / cover;
 }
 
 body.img02 {
-    background: #000 url(../img/effect_bg02@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg02-min-min.jpg) no-repeat center / cover;
 }
 
 body.img03 {
-    background: #000 url(../img/effect_bg03@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg03-min-min.jpg) no-repeat center / cover;
 }
 
 body.img04 {
-    background: #000 url(../img/effect_bg04@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg04-min-min.jpg) no-repeat center / cover;
 }
 
 body.img05 {
-    background: #000 url(../img/effect_bg05@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg05-min-min.jpg) no-repeat center / cover;
 }
 
 body.img06 {
-    background: #000 url(../img/effect_bg06@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg06-min-min.jpg) no-repeat center / cover;
 }
 
 body.img07 {
-    background: #000 url(../img/effect_bg07@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg07-min-min.jpg) no-repeat center / cover;
 }
 
 body.img08 {
-    background: #000 url(../img/effect_bg08@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg08-min-min.jpg) no-repeat center / cover;
 }
 
 body.img09 {
-    background: #000 url(../img/effect_bg09@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg09-min-min.jpg) no-repeat center / cover;
 }
 
 body.img10 {
-    background: #000 url(../img/effect_bg10@2x-min.jpg) no-repeat center / cover;
+    background: #000 url(../img/effect_bg10-min-min.jpg) no-repeat center / cover;
 }
 
 body::after {
@@ -71,10 +71,29 @@ a {
     text-decoration: none;
 }
 
+/* scroll */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #1f224a26;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(69, 71, 100, 0.321);
+    border-radius: 20px;
+}
+
 /* header */
 #header {
+
     color: #fff;
     padding: 20px;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 #header h1 {
@@ -103,6 +122,11 @@ a {
     font-size: 14px;
 }
 
+#header li.active a {
+    background-color: #fff;
+    color: #33377d;
+}
+
 /* footer */
 #footer .source {
     position: absolute;
@@ -117,14 +141,28 @@ a {
 /* modal__wrap */
 .modal__wrap {}
 
-.modal__btn {}
+.modal__btn {
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    display: inline-block;
+    padding: 10px 20px;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
 
-.modal__btn .btn {}
+.modal__btn:hover {
+    background-color: #fff;
+    color: #3b3d63;
+}
 
 .modal__cont {
     width: 100%;
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(0, 0, 0, 0.7);
     position: fixed;
     left: 0;
     top: 0;
@@ -132,24 +170,20 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    transform: scale(0);
 }
 
 .modal__box {
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    height: 600px;
-
-    background-color: #fff;
-    border-radius: 0.5rem;
-    background-color: #fff;
+    width: 70%;
+    height: 70vh;
+    border-radius: 0.6rem;
     box-shadow: 0 10px 20px -5px hsl(180deg 2% 10%);
+    transform: scale(0);
 }
 
 .modal__box .title {
     padding-inline: 1rem;
-    cursor: grab;
-    background-color: #1B1C2E;
+    background-color: #1b1c2e;
     display: flex;
     align-items: center;
     color: #fff;
@@ -161,7 +195,7 @@ a {
 .modal__box .title .dot {
     width: 15px;
     height: 15px;
-    background-color: #3B3D63;
+    background-color: #3b3d63;
     display: inline-block;
     border-radius: 50%;
     position: relative;
@@ -175,7 +209,7 @@ a {
     top: 0;
     width: 15px;
     height: 15px;
-    background-color: #3B3D63;
+    background-color: #3b3d63;
     border-radius: 50%;
 }
 
@@ -186,7 +220,7 @@ a {
     top: 0;
     width: 15px;
     height: 15px;
-    background-color: #3B3D63;
+    background-color: #3b3d63;
     border-radius: 50%;
 }
 
@@ -194,7 +228,7 @@ a {
     background: #282936;
     padding: 0.5rem 0.5rem 0.3rem 0.5rem;
     border-radius: 0.5rem;
-    color: #7A7D9D;
+    color: #7a7d9d;
 }
 
 .modal__box .title .tabs {
@@ -203,7 +237,7 @@ a {
 }
 
 .modal__box .title .tabs>div {
-    color: #7A7D9D;
+    color: #7a7d9d;
     background-color: #282936;
     padding: 0.35rem 0.8rem 0.25rem 0.8rem;
     margin-right: 0.5rem;
@@ -212,6 +246,10 @@ a {
     border-radius: 0.4rem;
     text-transform: uppercase;
     cursor: pointer;
+}
+
+.modal__box .title .tabs>div.active {
+    background-color: #1f224a;
 }
 
 .modal__box .title .tabs>div em {
@@ -229,13 +267,158 @@ a {
 
 .modal__box .cont {
     background-color: #282936;
-    height: 550px;
+    height: 100%;
+    overflow-y: auto;
     box-sizing: border-box;
     border-bottom-left-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
-    overflow-y: auto;
 }
 
 .modal__box .cont>div {
     display: none;
 }
+
+.modal__box .cont>div.active {
+    display: block;
+    height: 100%;
+}
+
+.modal__close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    background-color: #1f224a;
+    padding: 1rem 1rem 0.8rem 1rem;
+    border-radius: 5px;
+    box-shadow: 0 5px 7px -5px rgba(25, 26, 26, 0.698);
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.modal__close:hover {
+    background-color: #33377d;
+}
+
+.modal__close svg {
+    color: #fff;
+}
+
+/* 모달 애니메이션 */
+.modal__cont.show {
+    /* 전체 배경 */
+    animation: foldOut 1s ease forwards;
+}
+
+.modal__cont.show.hide {
+    /* 스크립트 박스 */
+    animation: foldIn 0.3s 0.5s ease backwards;
+}
+
+.modal__cont.show .modal__close {
+    /* 닫기 버튼 */
+    animation: opacityOut 0.5s 1s ease backwards;
+}
+
+.modal__cont.show .modal__box {
+    animation: zoomOut 0.5s 1s ease forwards;
+}
+
+.modal__cont.show.hide .modal__box {
+    animation: zoomIn 0.5s ease forwards;
+}
+
+.modal__cont.show.hide .modal__close {
+    animation: opacityOut 0.5s ease backwards;
+}
+
+
+@keyframes foldOut {
+    0% {
+        transform: scaleX(0) scaleY(0.001);
+    }
+
+    50% {
+        transform: scaleX(1) scaleY(0.001);
+    }
+
+    100% {
+        transform: scaleX(1) scaleY(1);
+    }
+}
+
+@keyframes foldIn {
+    0% {
+        transform: scaleX(1) scaleY(1);
+    }
+
+    50% {
+        transform: scaleX(1) scaleY(0.001);
+    }
+
+    100% {
+        transform: scaleX(0) scaleY(0.001);
+    }
+}
+
+@keyframes zoomOut {
+    0% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes zoomIn {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
+
+@media (max-width: 1100px) {
+    .modal__box .title {
+        overflow: hidden;
+    }
+
+    .modal__box .title .dot {
+        display: none;
+    }
+
+    .modal__box .title .tabs {
+        margin-left: 0;
+    }
+
+    .modal__box .title .tabs>div .close {
+        display: none;
+    }
+}
+
+@media (max-width: 600px) {
+    #header {
+        width: 100%;
+        text-align: center;
+    }
+
+    #header h1 {
+        line-height: 1.4;
+    }
+
+    .modal__box {
+        width: 96%;
+    }
+}
+
+
+
+/* 요소를 안보이게 하는 방법
+    1. display: none;       (애니메이션X, 영역X)
+    2. opacity: 0;          (애니메이션O, 영역O)
+    3. visibility: hidden;  (애니메이션X, 영역X)
+    4. transform: scale(0); (애니메이션O, 영역X)
+    5. width: 0; height: 0; (애니메이션X, 영역X) : blind
+*/
