--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -31,6 +31,7 @@ h6 {
     font-weight: normal;
 }
 
+
 /* 모든 페이지 레이아웃 */
 body {
     padding: 40px;
@@ -46,6 +47,8 @@ body {
     border-bottom: 1px dashed #dcdcdc;
 }
 
+.container {}
+
 #footer {
     padding: 40px 0;
     text-align: center;
@@ -59,6 +62,7 @@ body {
 #header h1 a {
     font-size: 60px;
     font-weight: 700;
+    color: #0243f1;
 }
 
 .header_nav ul li {
@@ -66,19 +70,19 @@ body {
 }
 
 .header_nav ul li.active a {
-    background-color: #000;
+    background-color: rgb(76, 84, 196);
     color: #fff;
 }
 
 .header_nav ul li a {
-    border: 1px solid #222;
+    border: 1px solid rgb(128, 118, 184);
     padding: 8px 25px;
     display: inline-block;
     margin-bottom: 7px;
 }
 
 .header_nav ul li a:hover {
-    background-color: #000;
+    background-color: #0243f1;
     color: #fff;
 }
 
@@ -89,7 +93,7 @@ body {
 .header_nav .study li a {
     border-radius: 50px;
     padding: 6px 30px;
-    background-color: #000;
+    background-color: rgb(128, 118, 184);
     color: #fff;
 }
 
@@ -119,7 +123,47 @@ body {
 }
 
 .main_sample .result {
+    margin-top: 10px;
     margin-bottom: 80px;
+    background: rgb(176, 174, 201);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+/* intro_menu */
+.intro_menu {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.1);
+    padding: 2vw;
+    border-radius: 1vw;
+    font-size: 1vw;
+    text-align: center;
+    color: rgb(38, 0, 255);
+
+}
+
+.intro_menu ul li a {
+    color: rgb(38, 0, 255);
+    font-size: 1vw;
+}
+
+@media (max-width: 600px) {
+    .intro_menu {
+        width: 90%;
+        padding: 14px;
+    }
+
+    .intro_menu li {
+        font-size: 16px;
+    }
+
+    .intro_menu li a {
+        font-size: 16px;
+    }
 }
 
 /* sample */
