--- a/coding2-main/javascript/assets/css/style.css
+++ b/coding2-main/javascript/assets/css/style.css
@@ -143,6 +143,7 @@ body {
     font-size: 1vw;
     text-align: center;
     color: rgb(38, 0, 255);
+    backdrop-filter: blur(10px);
 }
 
 .intro_menu ul li a {
