--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -211,6 +211,77 @@ body {
     color: #666;
 }
 
+.sample .view {
+    border: 1px solid #efefef;
+    padding: 30px 20px 290px 20px;
+    border-radius: 5px 5px 0 0;
+}
+
+.sample .blue {
+    background-color: #a2cbfa;
+    padding: 10px 20px;
+    border-radius: 5px 5px 0 0;
+    margin-bottom: 0;
+    border: 1 solid#efefef;
+    border-bottom: 0;
+    color: #666;
+
+}
+
+.sample .sbox {
+    width: 400px;
+    height: 200px;
+    background-color: #a2cbfa;
+    border: 1px solid #4390e1;
+    padding: 20px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px auto;
+    text-align: center;
+    color: #fff;
+
+}
+
+.sample.sbox::after {
+    content: '';
+    width: 400px;
+    height: 280px;
+    border: 1px dashed #4390e1;
+    position: absolute;
+    left: -21px;
+    top: -21px;
+}
+
+.sample.sbox::before {
+    content: '';
+    width: 398px;
+    height: 198px;
+    border: 1px dashed #4390e1;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
+
+.sample .sResult {
+    text-align: center;
+    padding-top: 10px;
+}
+
+.sample .button a {
+    border: #0242f136;
+    border-radius: 40px;
+    padding: 10px 20px;
+    display: inline-block;
+    margin: 5px;
+
+}
+
+.sample .button a:hover {}
+
+
+
 @media (max-width: 800px) {
     .sample .table {
         overflow-x: scroll;
