--- a/site/site1/assets/css/image.css
+++ b/site/site1/assets/css/image.css
@@ -13,11 +13,11 @@
 }
 
 .image.img1 {
-    background: url(../img/image_bg01.jpg) no-repeat center;
+    background: url(../img/img01_01.jpg) no-repeat center;
 }
 
 .image.img2 {
-    background: url(../img/image_bg02.jpg) no-repeat center;
+    background: url(../img/img01_02.jpg) no-repeat center;
 }
 
 .image__title {
