--- a/site/webd/1111/css/style.css
+++ b/site/webd/1111/css/style.css
@@ -1,49 +1,53 @@
 /* reset */
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* layout */
 #wrap {
-    width: 1200px;
-    margin: 0 auto;
+  width: 1200px;
+  height: 1000px;
+  margin: 0 auto;
+  background-color: rgb(108, 32, 32);
 }
 
 #header {
-    width: 1200px;
-    height: 100px;
-    background-color: #ccc;
-    overflow: hidden;
+  width: 1200px;
+  height: 100px;
+  background-color: rgb(143, 87, 87);
+  overflow: hidden;
 }
 
 #header .logo {
-    float: left;
-    padding: 20px;
+  float: left;
+  padding: 20px;
 }
 
 #header .nav {
-    float: right;
+  float: right;
 }
 
 #header .nav li {
-    display: inline;
+  display: inline;
 }
 
 #header .nav li a {
-    display: inline-block;
-    padding: 30px;
-    color: #222328;
-    font-size: 18px;
+  display: inline-block;
+  padding: 30px;
+  color: #222328;
+  font-size: 18px;
 }
 
+#slider {
+}
 
-#slider {}
+#info {
+}
 
-#info {}
-
-#footer {}
+#footer {
+}
