--- a/site/webd/1111/css/style.css
+++ b/site/webd/1111/css/style.css
@@ -3,51 +3,130 @@
   margin: 0;
   padding: 0;
 }
-
-a {
-  text-decoration: none;
+.clearfix::before,
+.clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
 }
 
 /* layout */
 #wrap {
-  width: 1200px;
+  width: 1000px;
   height: 1000px;
   margin: 0 auto;
-  background-color: rgb(108, 32, 32);
 }
-
+/* header */
 #header {
-  width: 1200px;
+  width: 1000px;
   height: 100px;
-  background-color: rgb(143, 87, 87);
-  overflow: hidden;
 }
-
-#header .logo {
+#header h1 {
   float: left;
-  padding: 20px;
+}
+#header h1 img {
+  width: 130px;
 }
 
 #header .nav {
   float: right;
 }
-
+#header .nav ul {
+}
 #header .nav li {
-  display: inline;
+  list-style: none;
+  float: left;
 }
 
 #header .nav li a {
-  display: inline-block;
-  padding: 30px;
-  color: #222328;
-  font-size: 18px;
+  display: block;
+  text-decoration: none;
+  font-size: 17px;
+  font-weight: 600;
+  color: #333;
+  padding: 40px 20px;
 }
 
 #slider {
 }
 
-#info {
+#slider img {
+  width: 100%;
+}
+#content1 {
+  margin-top: 15px;
+}
+.notice {
+  float: left;
+  width: 49%;
+  height: 200px;
+  background-color: #ccc;
+  margin-right: 2%;
+}
+.ad {
+  float: left;
+  width: 49%;
+  height: 200px;
+  margin-right: 0;
+  background-color: rgb(58, 44, 44);
+}
+.ad img {
+  width: 100%;
+  height: 200px;
+}
+#content2 {
+}
+#content2 h2 {
+  margin-bottom: 10px;
+  margin-top: 15px;
+  font-size: 20px;
+}
+#content2 div {
+  width: 24.25%;
+  margin-right: 1%;
+  float: left;
+}
+#content2 div span {
+  display: block;
+  margin-top: 15px;
+}
+#content2 div:last-child {
+  margin-right: 0;
+}
+#content2 img {
+  width: 100%;
+}
+#footer {
+  border-top: 1px solid #ccc;
+  margin-top: 30px;
+  padding-top: 30px;
+}
+#footer address {
+  font-style: normal;
+  color: #666;
+}
+#footer ul {
+  width: 70%;
 }
 
-#footer {
+#footer li {
+  list-style: none;
+  display: inline;
+  line-height: 1.7;
+  position: relative;
+  padding-right: 10px;
+}
+#footer address li::after {
+  content: "";
+  width: 1px;
+  height: 13px;
+  background: #666;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-top: 4px;
+}
+#footer p {
+  text-transform: uppercase;
+  padding: 20px 0;
 }
