--- a/site/webd/1111/css/style.css
+++ b/site/webd/1111/css/style.css
@@ -62,6 +62,7 @@
   position: absolute;
   background-color: #fff;
   display: none;
+  z-index: 100;
 }
 #header .nav li ul.submenu li {
   width: 100%;
@@ -93,7 +94,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background-color: #fff;
+  background-color: rgb(123, 250, 3);
   padding: 10px 30px;
   border-radius: 25px;
 }
