--- a/site/site1/assets/css/reset.css
+++ b/site/site1/assets/css/reset.css
@@ -25,8 +25,8 @@ input,
 button,
 figure,
 figcaption {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /* 시멘틱 태그 초기화 */
@@ -41,7 +41,7 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 /* 폰트 초기화 */
@@ -51,21 +51,22 @@ input,
 select,
 table,
 textarea {
-    color: #000;
-    font-family: 'NexonLv1Gothic', 'AppleSDGothicNeo-Regular', 'Malgun Gothic', '맑은 고딕', dotum, 돋움;
+  color: #000;
+  font-family: "NexonLv1Gothic", "AppleSDGothicNeo-Regular", "Malgun Gothic",
+    "맑은 고딕", dotum, 돋움;
 }
 
 /* 링크 초기화 */
 a {
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
 }
 
 /* 목록 초기화 */
 li,
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 /* 제목 초기화 */
@@ -75,59 +76,59 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: normal;
+  font-weight: normal;
 }
 
 /* 폰트 스타일 초기화 */
 em,
 address {
-    font-style: normal;
+  font-style: normal;
 }
 
 /* 이미지 초기화 */
 img {
-    width: 100%;
-    vertical-align: top;
+  width: 100%;
+  vertical-align: top;
 }
 
 /* 보더 초기화 */
 img,
 fieldset,
 button {
-    border: 0;
+  border: 0;
 }
 
 /* 클리어 픽스 */
 .clearfix {
-    zoom: 1;
+  zoom: 1;
 }
 
 .clearfix::before,
 .clearfix::after {
-    content: '';
-    display: block;
-    line-height: 0;
+  content: "";
+  display: block;
+  line-height: 0;
 }
 
 .clearfix::after {
-    clear: both;
+  clear: both;
 }
 
 /* 블라인드 효과 */
 .blind {
-    position: absolute;
-    clip: rect(0 0 0 0);
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    overflow: hidden
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
 }
 
 /* 이미지 대체(ir) 효과 */
 .ir {
-    display: block;
-    overflow: hidden;
-    font-size: 0;
-    line-height: 0;
-    text-indent: -9999px;
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px;
 }
