--- a/site/webd/1111/css/style1.css
+++ b/site/webd/1111/css/style1.css
@@ -77,7 +77,7 @@
 }
 /* slide */
 #slider {
-  width: 1000px;
+  width: 3000px;
   height: 300px;
   text-align: center;
   overflow: hidden;
@@ -88,8 +88,10 @@
   height: 300px;
 }
 .slideList .slideImg {
-  width: 100%;
+  width: 1000px;
+  height: 300px;
   position: relative;
+  float: left;
 }
 .slideList .slideImg h2 {
   position: absolute;
@@ -102,7 +104,8 @@
 }
 .slideList .slideImg img {
   display: block;
-  width: 100%;
+  width: 1000px;
+  height: 300px;
 }
 #content1 {
   margin-top: 15px;
