--- a/site/site1/assets/css/image.css
+++ b/site/site1/assets/css/image.css
@@ -66,6 +66,7 @@ h6 {
 .image__title {
   font-size: 32px;
   margin-bottom: 10px;
+  overflow: hidden;
 }
 
 .image__desc {
@@ -91,4 +92,25 @@ h6 {
 
 .image__btn.orange {
   background-color: #c5740a;
+}
+
+@media (max-width: 960px) {
+}
+@media (max-width: 600px) {
+  .image__inner {
+    flex-direction: column;
+  }
+  .image {
+    width: 100%;
+    padding: 210px 20px 20px 20px;
+  }
+  .image:first-child {
+    margin-bottom: 20px;
+  }
+  .image__title {
+    font-size: 24px;
+  }
+  .image__desc {
+    font-size: 16px;
+  }
 }
