--- a/site/site1/assets/css/footer.css
+++ b/site/site1/assets/css/footer.css
@@ -18,3 +18,15 @@
   text-align: center;
   padding-top: 40px;
 }
+@media (max-width: 960px) {
+  .footer__menu {
+    display: none;
+  }
+  .footer__right {
+    padding-top: 0;
+    border-top: 0;
+  }
+  .footer__wrap {
+    padding: 40px 0;
+  }
+}
