--- a/css/assets/css/style.css
+++ b/css/assets/css/style.css
@@ -1,233 +1,248 @@
-/* 여백 초기화 */
+/* 웹폰트 */
+@import url("https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css");
+@import url("https://webfontworld.github.io/ok/OKDdung.css");
+@import url("https://webfontworld.github.io/score/SCoreDream.css"); /* 여백 초기화 */
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /* 링크 초기화 */
 a {
-    text-decoration: none;
-    color: #222;
+  text-decoration: none;
+  color: #222;
 }
 
 /* 목록 초기화 */
 li {
-    list-style: none;
+  list-style: none;
 }
 
 /* 제목 초기화 */
-h1, h2, h3, h4, h5, h6 {
-    font-weight: normal;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
 }
 
 /* 볼드체 초기화 */
 strong {
-    font-weight: normal;
+  font-weight: normal;
 }
 
 /* 이탤릭체 초기화 */
-em, i {
-    font-style: normal;
+em,
+i {
+  font-style: normal;
 }
 
 /* 테이블 초기화 */
 table {
-    width: 100%;
-    border-spacing: 0;
-    border-collapse: collapse;
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
 /* 기본 셋팅 */
 :root {
-    font-size: 22px; /* 1rem */
-    --fontTitle: "OKDdung";
-    --fontSub: "UtoImageTree";
-    --fontDocs: "SCoreDream";
-    --white: #fff;
-    --black: #000;
-    --orange: #e5774f;
-    --orange2: #eb943a;
-    --red: #c54435;
-    --bgMain: #f4b861;
-    --bgSub: #fef2e0;
-    --brown: #762917;
+  font-size: 22px; /* 1rem */
+  --fontTitle: "OKDdung";
+  --fontSub: "UtoImageTree";
+  --fontDocs: "SCoreDream";
+  --white: #fff;
+  --black: #000;
+  --orange: #e5774f;
+  --orange2: #eb943a;
+  --red: #c54435;
+  --bgMain: #f4b861;
+  --bgSub: #fef2e0;
+  --brown: #762917;
 }
 
 /* 레이아웃 */
 body {
-    background-color: var(--bgMain);
+  background-color: var(--bgMain);
 }
-#header {}
-#main {}
+#header {
+}
+#main {
+}
 #footer {
-    padding: 40px 0;
-    text-align: center;
+  padding: 40px 0;
+  text-align: center;
 }
 #footer a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 /* container */
 .container {
-    max-width: 1400px;
-    width: 100%;
-    margin: 0 auto;
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
 }
 
-/* main__title */
-.main__title {
-    margin: 200px 20px;
-    border: 4px solid var(--brown);
-    background-color: var(--bgSub);
-    padding: 80px;
-    text-align: center;
+/* main_title */
+.main_title {
+  margin: 200px 20px;
+  margin-top: 200px;
+  border: 4px solid var(--brown);
+  background-color: var(--bgSub);
+  padding: 80px;
+  text-align: center;
 }
-.main__title h1 {
-    font-family: var(--fontTitle);
-    font-size: 8vw;
-    color: var(--orange);
-    white-space: nowrap;
+.main_title h1 {
+  font-family: var(--fontTitle);
+  font-size: 7vw;
+  color: var(--orange);
+  white-space: nowrap;
 }
-.main__title h1 strong {
-    color: var(--orange2);
+.main_title h1 strong {
+  color: var(--bgMain);
 }
-.main__title em {
-    font-family: var(--fontSub);
-    font-size: 100px;
-    color: var(--brown);
+.main_title em {
+  font-family: var(--fontSub);
+  font-size: 100px;
+  color: var(--brown);
 }
-.main__title p {
-    font-family: var(--fontSub);
-    font-size: 30px;
-    color: var(--brown);
-    margin-top: 50px;
-}
-
-
-/* main__desc */
-.main__desc {
-    margin: 200px 20px;
-    border: 4px solid var(--brown);
-    background-color: var(--bgSub);
-    padding: 120px 80px 80px 80px;
-    position: relative;
-    border-radius: 30px;
-    overflow: hidden;
-}
-.main__desc .deco{
-    position: absolute;
-    left: 50%;
-    top: 0;
-    transform: translate(-50%);
-    padding-top: 10px;
-    white-space: nowrap;
-    width: 90%;
-    overflow: hidden;
-}
-.main__desc .deco span{
-    width: 30px;
-    height: 30px;
-    border: 10px solid var(--brown);
-    border-radius: 50%;
-    box-sizing: border-box;
-    background-color: var(--bgMain);
-    display: inline-block;
-    margin: 0 1%;
-    position: relative;
-}
-.main__desc .deco span::after{
-    content: '';
-    width: 10px;
-    height: 10px;
-    background-color: var(--brown);
-    position: absolute;
-    left: 0;
-    top: -20px;
-
+.main_title p {
+  font-family: var(--fontSub);
+  font-size: 30px;
+  color: var(--brown);
+  margin-top: 50px;
 }
 
-.main__desc .title {
-   
-    justify-content: space-between;
-    margin-bottom: 2rem;
+/* main_desc */
+.main_desc {
+  margin: 200px 20px;
+  margin-top: 200px;
+  border: 4px solid var(--brown);
+  background-color: var(--bgSub);
+  padding: 120px 80px 80px 80px;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
 }
-.main__desc .title h2 {
-    display: inline-block;
-    width: 35%;
-    border: 4px solid var(--brown);
-    font-size: 2rem; /* 44px */
-    padding: 0.7rem 1rem 0.5rem 80px;
-    font-family: var(--fontDocs);
-    font-weight: 900;
-    color: var(--brown);
-    position: relative;
-    box-sizing: border-box;
+.main_desc .deco {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+  padding-top: 10px;
+  white-space: nowrap; /*줄바꿈 안하게 하는 것*/
+  width: 90%;
 }
-.main__desc .title h2::before {
-    content: '';
-    width: 50px;
-    height: 100%;
-    background: var(--red);
-    position: absolute;
-    left: 0;
-    top: 0;
-    border-right: 4px solid var(--brown);
+.main_desc .deco span {
+  width: 30px;
+  height: 30px;
+  background: #000;
+  display: inline-block;
+  border: 10px solid var(--brown);
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  background-color: var(--bgMain);
+  margin: 0 1%;
+  position: relative;
 }
-.main__desc .title p {
-  
-    font-family: var(--fontSub);
-    font-size: 1.3rem;
-    line-height: 1.3;
-    color: var(--brown);
-    
+.main_desc .deco span::after {
+  content: "";
+  width: 10px;
+  height: 13px;
+  background-color: var(--brown);
+  position: absolute;
+  left: 0;
+  top: -20px;
 }
-.main__desc .subTitle ul {
-    overflow:hidden;
-}
-.main__desc .subTitle li {
- float: left;
- margin-right: -4px;
- margin-bottom: -4px;
-}
-.main__desc .subTitle li a {
-font-size: 0.8rem;
-font-family: var(--fontDocs);
-border: 4px solid var(--brown);
-padding: 0.5em 1em;
-display: inline-block;
-
-}
-.main__desc .subTitle li.active a {
-    background-color: var(--brown);
-    color: var(--white);
+.main_desc .title {
+  margin-bottom: 2rem;
 }
 
-.main__desc .table {
-    border: 3px solid var(--brown);
-    font-family: var(--fontDocs);
-    font-size: 0.7rem;
+.main_desc .title h2 {
+  display: inline-block;
+  border: 4px solid var(--brown);
+  font-style: 2rem; /*44px*/
+  padding: 0.6rem 1rem 0.5rem 80px;
+  font-family: var(--fontDocs);
+  font-weight: 900;
+  color: var(--brown);
+  position: relative;
+  box-sizing: border-box;
 }
-.main__desc .table tr th {
-    background-color: rgba(0,0,0,0.08);
-    font-weight: normal;
+.main_desc .title h2::before {
+  content: "";
+  width: 50px;
+  height: 100%;
+  background-color: var(--red);
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-right: 4px solid var(--brown);
 }
-.main__desc .table tr th,
-.main__desc .table tr td {
-    border: 1px solid var(--brown);
-    padding: 10px;
-    text-align: center;
+.main_desc .title p {
+  font-family: var(--fontSub);
+  font-size: 1.3rem;
+  line-height: 1.3;
+  color: var(--brown);
 }
-.main__desc .table tr td:nth-child(2){
-   
+.main_desc .subTitle {
+  overflow: hidden;
 }
-.main__desc .table tr td:nth-child(3){
+.main_desc .subTitle ul {
+}
+.main_desc .subTitle li {
+  float: left; /*원래 display: inline; 이었는데 float으로 바꿔줌*/
+  margin-right: -4px; /*마진값만 -쓸 수 있음*/
+  margin-bottom: -4px;
+}
+.main_desc .subTitle li.active a {
+  background-color: var(--brown);
+  color: var(--white);
+}
+.main_desc .subTitle li a {
+  font-family: var(--fontDocs);
+  font-size: 0.8rem;
+  border: 4px solid var(--brown);
+  padding: 0.5em 1em;
+  display: inline-block; /*안그러면 이미 인라인 구조라서 깨짐*/
+}
+
+.main_desc .table {
+  border: 3px solid var(--brown);
+  font-family: var(--fontDocs);
+  font-size: 0.7rem;
+}
+.main_desc .table tr th {
+  background-color: rgba(0, 0, 0, 0.08);
+  font-weight: normal;
+}
+.main_desc .table tr th,
+.main_desc .table tr td {
+  border: 1px solid var(--brown);
+  padding: 10px;
+  text-align: center;
+}
+
+/* .main_desc .table tr td:nth-child(3){
     text-align: left;
+} */
+
+.main_desc .table tr td span {
+  font-size: 16px;
+  padding-top: 4px;
 }
-.main__desc .table .rowTable{
-    text-align: left;
+
+.main_desc .table tr td:nth-child(2),
+.main_desc .table tr td:nth-child(3) {
+  text-align: left;
 }
-.m
-.main__desc .table tr td span {
-    font-size: 16px;
-    padding-top: 4px;
+.main_desc .table.rowTable tr td:nth-child(2),
+.main_desc .table.rowTable tr td:nth-child(3) {
+  text-align: center;
+}
+.main_desc .table.rowTable .left {
+  text-align-last: left !important;
 }
