--- a/javascript/assets/css/data.css
+++ b/javascript/assets/css/data.css
@@ -1,5 +1,4 @@
-/* fonts */
-@import url("https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css");
+/* reset */
 * {
   margin: 0;
   padding: 0;
@@ -7,158 +6,100 @@
   font-family: "NexonLv1Gothic";
 }
 
-body {
-  width: 100%;
-  height: 100vh;
-}
-
-body.img01 {
-  background: #000 url(../img/effect_bg01-min-min.jpg) no-repeat center / cover;
-}
-
-body.img02 {
-  background: #000 url(../img/effect_bg02-min-min.jpg) no-repeat center / cover;
-}
-
-body.img03 {
-  background: #000 url(../img/effect_bg03-min-min.jpg) no-repeat center / cover;
-}
-
-body.img04 {
-  background: #000 url(../img/effect_bg04-min-min.jpg) no-repeat center / cover;
-}
-
-body.img05 {
-  background: #000 url(../img/effect_bg05-min-min.jpg) no-repeat center / cover;
-}
-
-body.img06 {
-  background: #000 url(../img/effect_bg06-min-min.jpg) no-repeat center / cover;
-}
-
-body.img07 {
-  background: #000 url(../img/effect_bg07-min-min.jpg) no-repeat center / cover;
-}
-
-body.img08 {
-  background: #000 url(../img/effect_bg08-min-min.jpg) no-repeat center / cover;
-}
-
-body.img09 {
-  background: #000 url(../img/effect_bg09-min-min.jpg) no-repeat center / cover;
-}
-
-body.img10 {
-  background: #000 url(../img/effect_bg10-min-min.jpg) no-repeat center / cover;
-}
-
-body::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  background: rgba(23, 20, 88, 0.386);
-  z-index: -1;
-}
-
-img {
-  width: 100%;
-  vertical-align: top;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
 a {
-  color: #fff;
   text-decoration: none;
 }
 
-/* scroll */
-::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: #1f224a26;
-}
-
-::-webkit-scrollbar-thumb {
-  background: rgba(69, 71, 100, 0.321);
-  border-radius: 20px;
-}
-
-/* layout */
-#header {
-  z-index: 2000;
-}
-
-#main {
-  position: relative;
-  z-index: 1000;
-}
-
-#footer {
-  position: relative;
-  z-index: 3000;
+/* container */
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 /* header */
 #header {
-  color: #fff;
-  padding: 20px;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-#header h1 {
-  display: inline-block;
-  font-weight: 300;
-  margin-bottom: 10px;
-  border-bottom: 1px dashed #fff;
-}
-
-#header p {
-  margin-bottom: 10px;
+  padding: 2vw;
 }
 
 #header li {
-  display: inline-block;
+  display: inline;
 }
 
 #header li a {
-  border: 1px solid #fff;
-  border-radius: 50%;
   display: inline-block;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  border: 1px solid #000;
   text-align: center;
-  line-height: 30px;
-  font-size: 14px;
+  line-height: 40px;
+  color: #000;
 }
 
 #header li.active a {
-  background-color: #fff;
-  color: #33377d;
+  background: #000;
+  color: #fff;
 }
 
-/* footer */
-#footer .source {
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
-  border: 1px solid #fff;
-  border-radius: 40px;
-  padding: 10px 30px;
-  font-size: 14px;
+/* main */
+#main {
+  padding: 3vw;
 }
 
+#main h2 {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+#main h3 {
+  font-size: 1.6rem;
+  margin-bottom: 0.5em;
+  line-height: 1.6;
+  margin-top: 3em;
+  font-weight: 300;
+}
+
+#main .result {
+  background-color: #f2f2f2;
+  padding: 10px;
+  cursor: pointer;
+}
+
+#main .result div {
+  margin: 10px;
+  padding: 10px;
+  background: #000;
+  color: #fff;
+}
 /* modal__wrap */
 .modal__wrap {
 }
-
+.modal__cont {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.3);
+  position: fixed;
+  left: 0;
+  top: 0;
+  overflow-x: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* display: none;
+    /*flex가 우선 순위이기 때문에 밑에다 적어주어야 함*/
+  /* opacity: 0;  */
+  /* opacity 0 줘서 클릭 안됨 */
+  transform: scale(1);
+}
 .modal__btn {
+  cursor: pointer;
   color: #fff;
   border: 1px solid #fff;
   border-radius: 50px;
@@ -167,39 +108,25 @@ a {
   position: absolute;
   right: 20px;
   bottom: 20px;
-  cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
-
 .modal__btn:hover {
   background-color: #fff;
-  color: #3b3d63;
-}
-
-.modal__cont {
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.7);
-  position: fixed;
-  left: 0;
-  top: 0;
-  overflow-x: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transform: scale(0);
+  color: #3d3d63;
 }
 
 .modal__box {
+  /* display: none; */
   width: 70%;
   height: 70vh;
   border-radius: 0.6rem;
   box-shadow: 0 10px 20px -5px hsl(180deg 2% 10%);
   transform: scale(0);
+  /* overflow: hidden; */
 }
-
 .modal__box .title {
   padding-inline: 1rem;
+  cursor: grab;
   background-color: #1b1c2e;
   display: flex;
   align-items: center;
@@ -208,7 +135,6 @@ a {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 }
-
 .modal__box .title .dot {
   width: 15px;
   height: 15px;
@@ -218,7 +144,6 @@ a {
   position: relative;
   margin-left: 2rem;
 }
-
 .modal__box .title .dot::before {
   content: "";
   position: absolute;
@@ -229,7 +154,6 @@ a {
   background-color: #3b3d63;
   border-radius: 50%;
 }
-
 .modal__box .title .dot::after {
   content: "";
   position: absolute;
@@ -240,19 +164,16 @@ a {
   background-color: #3b3d63;
   border-radius: 50%;
 }
-
 .modal__box .title .plus {
   background: #282936;
   padding: 0.5rem 0.5rem 0.3rem 0.5rem;
   border-radius: 0.5rem;
   color: #7a7d9d;
 }
-
 .modal__box .title .tabs {
   display: flex;
   margin-left: 50px;
 }
-
 .modal__box .title .tabs > div {
   color: #7a7d9d;
   background-color: #282936;
@@ -264,33 +185,27 @@ a {
   text-transform: uppercase;
   cursor: pointer;
 }
-
 .modal__box .title .tabs > div.active {
-  background-color: #1f224a;
+  background-color: #eee;
 }
-
 .modal__box .title .tabs > div em {
   font-style: normal;
 }
-
 .modal__box .title .tabs > div .favicon {
   margin-right: 0.4rem;
   margin-top: 0.2rem;
 }
-
 .modal__box .title .tabs > div .close {
-  margin-left: 4rem;
+  margin-left: 3rem;
 }
-
 .modal__box .cont {
   background-color: #282936;
   height: 100%;
-  overflow-y: auto;
   box-sizing: border-box;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
+  overflow-y: auto;
 }
-
 .modal__box .cont > div {
   display: none;
 }
@@ -309,108 +224,89 @@ a {
   border-radius: 5px;
   box-shadow: 0 5px 7px -5px rgba(25, 26, 26, 0.698);
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all 0.3s ease;
+  opacity: 0;
 }
-
 .modal__close:hover {
   background-color: #33377d;
 }
-
 .modal__close svg {
   color: #fff;
 }
-
 /* 모달 애니메이션 */
 .modal__cont.show {
   /* 전체 배경 */
   animation: foldOut 1s ease forwards;
 }
-
-.modal__cont.show.hide {
-  /* 스크립트 박스 */
-  animation: foldIn 0.3s 0.5s ease backwards;
-}
-
-.modal__cont.show .modal__close {
-  /* 닫기 버튼 */
-  animation: opacityOut 0.5s 1s ease backwards;
-}
-
 .modal__cont.show .modal__box {
+  /* 스크립트 박스 */
   animation: zoomOut 0.5s 1s ease forwards;
 }
+.modal__cont.show .modal__close {
+  /* 닫기 버튼 */
+  animation: opacityOut 0.5s 1s ease forwards;
+}
 
+.modal__cont.show.hide {
+  animation: foldIn 0.3s 0.5s ease backwards;
+}
 .modal__cont.show.hide .modal__box {
   animation: zoomIn 0.5s ease forwards;
 }
-
 .modal__cont.show.hide .modal__close {
-  animation: opacityOut 0.5s ease backwards;
+  animation: opacityIn 0.5s ease forwards;
 }
 
 @keyframes foldOut {
   0% {
     transform: scaleX(0) scaleY(0.001);
   }
-
   50% {
     transform: scaleX(1) scaleY(0.001);
   }
-
   100% {
     transform: scaleX(1) scaleY(1);
   }
 }
-
 @keyframes foldIn {
   0% {
     transform: scaleX(1) scaleY(1);
   }
-
   50% {
     transform: scaleX(1) scaleY(0.001);
   }
-
   100% {
     transform: scaleX(0) scaleY(0.001);
   }
 }
-
 @keyframes zoomOut {
   0% {
     transform: scale(0);
   }
-
   100% {
     transform: scale(1);
   }
 }
-
 @keyframes zoomIn {
   0% {
     transform: scale(1);
   }
-
   100% {
     transform: scale(0);
   }
 }
-
 @keyframes opacityOut {
   0% {
     opacity: 0;
   }
-
   100% {
     opacity: 1;
   }
 }
-
 @keyframes opacityIn {
   0% {
     opacity: 1;
   }
-
   100% {
     opacity: 0;
   }
@@ -420,39 +316,25 @@ a {
   .modal__box .title {
     overflow: hidden;
   }
-
   .modal__box .title .dot {
     display: none;
   }
-
   .modal__box .title .tabs {
     margin-left: 0;
   }
-
   .modal__box .title .tabs > div .close {
     display: none;
   }
 }
-
 @media (max-width: 800px) {
   #header {
     width: 100%;
     text-align: center;
   }
-
   #header h1 {
     line-height: 1.4;
   }
-
   .modal__box {
     width: 96%;
   }
 }
-
-/* 요소를 안보이게 하는 방법
-    1. display: none;       (애니메이션X, 영역X)
-    2. opacity: 0;          (애니메이션O, 영역O)
-    3. visibility: hidden;  (애니메이션X, 영역X)
-    4. transform: scale(0); (애니메이션O, 영역X)
-    5. width: 0; height: 0; (애니메이션X, 영역X) : blind
-*/
