--- a/site1/assets/css/common.css
+++ b/site1/assets/css/common.css
@@ -89,7 +89,14 @@
 .gray {
   background-color: #f5f5f5;
 }
-
+/* fixed */
+body {
+  overflow: overlay;
+}
+body.fixed {
+  height: 100vh;
+  overflow: scroll;
+}
 /* 간격 셋팅 */
 .mb0 {
   margin-bottom: 0 !important;
