--- a/site1/assets/css/slider.css
+++ b/site1/assets/css/slider.css
@@ -84,6 +84,10 @@ c {
   background-image: url(../img/slider_icons.svg);
   background-position: -20px -70px;
 }
+.swiper-button-stop {
+}
+.swiper-button {
+}
 
 /* media */
 @media (max-width: 960px) {
