--- a/site1/assets/css/banner.css
+++ b/site1/assets/css/banner.css
@@ -1,32 +1,41 @@
 .banner__inner {
-  background-image: url(../img/banner_bg01.jpg);
+  background-image: url(../img/banner01_bg01.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  padding: 120px 0;
+  color: black;
+}
+.banner__inner .title {
+  font-size: 50px;
+  line-height: 1;
+  font-weight: 500;
+  margin-bottom: 40px;
 }
 .banner__inner .desc {
+  font-size: 24px;
+  line-height: 1.5;
+  font-weight: 300;
+  margin-bottom: 70px;
+  word-break: keep-all;
 }
 .banner__inner .desc a {
+  color: black;
+  display: block;
 }
 .banner__inner .desc a:hover {
+  text-decoration: underline;
 }
-.banner__inner {
+.banner__inner .small {
+  font-size: 16px;
+  text-decoration: underline;
 }
-.banner__inner {
-}
-
-@media (max-width: 960px) {
-  .banner__inner {
-    padding: 100px 0;
-  }
-}
-@media (max-width: 600px) {
-  .banner__inner {
-    padding: 80px 0;
-  }
+@media (max-width: 786px) {
   .banner__inner .title {
-    font-size: 30px;
-    margin-bottom: 20px;
+    font-size: 42px;
   }
   .banner__inner .desc {
-    font-size: 16px;
-    margin-bottom: 40px;
+    font-size: 18px;
   }
 }
