--- a/javascript/assets/css/parallax.css
+++ b/javascript/assets/css/parallax.css
@@ -7,7 +7,8 @@
 body {
   background-color: #222;
   color: #fff;
-  font-weight: 300;
+  font-family: "NexonLv1Gothic";
+  font-weight: 600;
 }
 img {
   width: 100%;
@@ -68,7 +69,7 @@ li {
 
 #header h1 {
   display: inline-block;
-  font-weight: 300;
+  font-weight: bold;
   margin-bottom: 10px;
   border-bottom: 2px dashed #fff;
 }
