--- a/javascript/assets/css/parallax.css
+++ b/javascript/assets/css/parallax.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: "NEXONLv1Gothic";
+  font-weight: 300;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Light.woff")
+    format("woff");
+  font-style: normal;
+}
+@font-face {
+  font-family: "NEXONLv1Gothic";
+  font-weight: 400;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff")
+    format("woff");
+  font-style: normal;
+}
 * {
   margin: 0;
   padding: 0;
