--- a/site1/assets/css/banner.css
+++ b/site1/assets/css/banner.css
@@ -1,16 +1,16 @@
 .banner__inner {
-  background-image: url(../img/banner01_bg01.jpg);
+  background-image: url(../img/banner_bg01.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   text-align: center;
   padding: 120px 0;
-  color: black;
+  color: #fff;
 }
 .banner__inner .title {
   font-size: 50px;
   line-height: 1;
-  font-weight: 500;
+  font-weight: 300;
   margin-bottom: 40px;
 }
 .banner__inner .desc {
@@ -18,10 +18,9 @@
   line-height: 1.5;
   font-weight: 300;
   margin-bottom: 70px;
-  word-break: keep-all;
 }
 .banner__inner .desc a {
-  color: black;
+  color: #fff;
   display: block;
 }
 .banner__inner .desc a:hover {
@@ -31,11 +30,21 @@
   font-size: 16px;
   text-decoration: underline;
 }
-@media (max-width: 786px) {
+@media (max-width: 960px) {
+  .banner__inner {
+    padding: 100px 0;
+  }
+}
+@media (max-width: 600px) {
+  .banner__inner {
+    padding: 80px 0;
+  }
   .banner__inner .title {
-    font-size: 42px;
+    font-size: 30px;
+    margin-bottom: 20px;
   }
   .banner__inner .desc {
-    font-size: 18px;
+    font-size: 16px;
+    margin-bottom: 40px;
   }
 }
