--- a/site1/assets/css/header.css
+++ b/site1/assets/css/header.css
@@ -1,6 +1,6 @@
 #headerType {
   width: 1920px;
-  height: 100px;
+  height: 70px;
   margin: 0 auto;
 }
 .header__inner {
@@ -19,12 +19,14 @@
   background: #fff;
 }
 .header__logo {
-  width: 20%;
+  width: 10%;
   font-size: 30px;
   font-weight: 700;
+
   text-transform: uppercase;
 }
 .header__logo em {
+  padding-left: 10px;
   font-size: 18px;
   font-weight: 400;
 }
