--- a/site1/assets/css/imgText.css
+++ b/site1/assets/css/imgText.css
@@ -1,38 +1,124 @@
-@media (width: 960px) {
-  .imgText__innner {
+/* imgTextType */
+.imgText__inner {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.imgText__inner > div {
+  width: 32%;
+  height: 500px;
+}
+.imgText__txt span {
+  font-size: 16px;
+  color: #666;
+  text-decoration: underline;
+  text-underline-position: under;
+  margin-bottom: 30px;
+  display: block;
+}
+.imgText__txt h3 {
+  font-size: 50px;
+  font-weight: 400;
+  margin-bottom: 50px;
+}
+.imgText__txt p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #666;
+  margin-bottom: 30px;
+}
+.imgText__txt ul {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 2;
+}
+.imgText__txt ul li {
+  position: relative;
+  padding-left: 20px;
+}
+.imgText__txt ul li a {
+  color: #666;
+}
+.imgText__txt ul li::before {
+  content: "";
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  position: absolute;
+  left: 5px;
+  top: 9px;
+  background: #666;
+}
+.imgText__img {
+  border-radius: 10px;
+  position: relative;
+}
+.imgText__img a {
+  position: absolute;
+  left: 30px;
+  bottom: 30px;
+  background-color: rgba(66, 14, 14, 0.849);
+  color: #fff;
+  font-size: 18px;
+  padding: 10px 30px;
+  border-radius: 30px;
+  display: inline-block;
+}
+.imgText__img a.blue {
+  background-color: rgba(87, 43, 18, 0.815);
+}
+.imgText__img.img1 {
+  background: url(../img/textType03_02_bg.jpg) no-repeat center / cover;
+}
+.imgText__img.img2 {
+  background: url(../img/textType03_01_bg.jpg) no-repeat center / cover;
+}
+
+@media (max-width: 960px) {
+  .imgText__inner {
     flex-wrap: wrap;
   }
-  .imgText__txt p {
+  .imgText__txt h3 {
+    font-size: 40px;
+    word-break: keep-all;
   }
-  .imgText__innner > div.imgText__txt {
+  .imgText__txt p {
+    margin-bottom: 60px;
+  }
+  .imgText__inner > div.imgText__txt {
     width: 100%;
     height: auto;
     text-align: center;
   }
-  .imgText__innner > div.imgText__txt ul {
+  .imgText__inner > div.imgText__txt ul {
     display: none;
   }
-  .imgText__innner > div.imgText__img {
+  .imgText__inner > div.imgText__img {
     width: 49%;
   }
 }
-@media (width: 600px) {
-  .imgText__txt {
+@media (max-width: 600px) {
+  .imgText__txt span {
+    font-size: 14px;
+    margin-bottom: 10px;
   }
   .imgText__txt h3 {
     font-size: 30px;
   }
   .imgText__txt p {
-    font-size: 16px;
     margin-bottom: 50px;
+    font-size: 16px;
   }
-  .imgText__txt;
-}
-
-.section {
-  padding: 80px 0;
-}
-.section h2 {
-}
-.section p {
+  .imgText__inner > div.imgText__img {
+    width: 100%;
+    height: 300px;
+  }
+  .imgText__inner > div.imgText__img.img1 {
+    margin-bottom: 20px;
+  }
+  .imgText__img a {
+    left: 20px;
+    bottom: 20px;
+  }
 }
