--- a/site1/assets/css/slider.css
+++ b/site1/assets/css/slider.css
@@ -1,23 +1,28 @@
 .slider__inner {
 }
 .slider {
+  position: relative;
 }
 .slider__img {
-  width: 500px;
   background: url(../img/slider_bg01.jpg) no-repeat center/cover;
 }
 .slider__img .desc {
-  width: 1160px;
+  /* width: 1160px; */
+  width: 90%;
   margin: 0 auto;
 }
 .slider__img .desc span {
   font-size: 16px;
   background-color: #fff;
   padding: 1px 14px 0 14px;
+  border-radius: 30px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  display: inline-block;
 }
-c {
+.slider__img .desc h3 {
   font-size: 110px;
-  ffw: 300px;
+  font-weight: 300;
   line-height: 1;
   color: #fff;
   text-transform: uppercase;
@@ -28,6 +33,8 @@ c {
   font-size: 20px;
   font-weight: 300;
   color: #fff;
+  line-height: 1.35;
+  margin-bottom: 130px;
 }
 .slider__img .desc .btn {
 }
