--- a/site1/assets/css/card.css
+++ b/site1/assets/css/card.css
@@ -1,57 +1,61 @@
 /* cardType  */
 .card__inner {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .card {
-  width: 32%;
-  background-color: #f5f5f5;
+    width: 32%;
+    background-color: #f5f5f5;
 }
 
 .card__body {
-  padding: 24px;
+    padding: 24px;
 }
 
 .card__body .tit {
-  font-size: 24px;
-  margin-bottom: 10px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+    font-size: 24px;
+    margin-bottom: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .card__body .desc {
-  font-size: 18px;
-  line-height: 1.4;
-  color: #666;
-  margin-bottom: 20px;
-  font-weight: 300;
-  /* 3줄효과 */
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
+    font-size: 18px;
+    line-height: 1.4;
+    color: #666;
+    margin-bottom: 20px;
+    font-weight: 300;
+    /* 3줄효과 */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 @media (max-width: 960px) {
-  .card {
-    width: 49%;
-  }
-  .card:last-child {
-    display: none;
-  }
+    .card {
+        width: 32%;
+    }
 }
+
+/* 600일때 1개 */
 @media (max-width: 600px) {
-  .card {
-    width: 100%;
-  }
-  .card:first-child {
-    margin-bottom: 20px;
-  }
-  .card__body {
-    padding: 20px;
-  }
-  .card__body.desc {
-  }
+    .card {
+        width: 100%;
+    }
+
+    .card__inner {
+        display: block;
+    }
+    .card:first-child {
+        margin-bottom: 20px;
+    }
+    .card__body {
+        padding: 20px;
+    }
+    .card__body .desc {
+        font-size: 16px;
+    }
 }
